<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Login">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editRegister"
        android:textColor="@color/yellow"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/yellow"
            android:textColorHint="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editPassword"
            android:inputType="textPassword"
            android:textColor="@color/yellow"
            android:textColorHint="@color/yellow" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/buttonSignUp"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/textLoginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLoginNow"
        android:layout_margin="8dp"
        android:textColor="@color/yellow"
        android:focusable="true"/>
</LinearLayout>